fix(css): fixed menu going out of bounds when increasing the number of items

--- a/src/components/HeaderNav/HeaderNav.scss
+++ b/src/components/HeaderNav/HeaderNav.scss
@@ -60,7 +60,6 @@
         display: none;
         flex-direction: column;
         align-items: center;
-        gap: 40px;
 
         &_active {
             position: fixed;
@@ -81,7 +80,14 @@
         @media (min-width: 768px) {
             display: flex;
             flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: flex-end;
             align-items: center;
+            gap: 15px;
+        }
+
+        @media (min-width: 1024px) {
+            gap: 40px;
         }
     }
     
